# kr1bou_proto

./: .gitignore  kr1bou_startup.sh  requirements.txt  run_rosmaster.sh  test.py
archive/: old_config.yaml  old_strategy.py  state_manager.py
devel/: .catkin
devel/lib/pkgconfig/: kr1bou_actuators.pc  kr1bou_controller.pc  kr1bou_launch.pc  kr1bou_safety.pc  kr1bou_sensors.pc
devel/share/kr1bou_actuators/cmake/: kr1bou_actuatorsConfig.cmake
devel/share/kr1bou_controller/cmake/: kr1bou_controllerConfig.cmake
devel/share/kr1bou_launch/cmake/: kr1bou_launchConfig.cmake
devel/share/kr1bou_safety/cmake/: kr1bou_safetyConfig.cmake
src/kr1bou_actuators/: CMakeLists.txt  package.xml
src/kr1bou_actuators/launch/: actuators.launch
src/kr1bou_actuators/scripts/: solar_control.py  wheel_control.py
src/kr1bou_controller/: CMakeLists.txt  package.xml
src/kr1bou_controller/launch/: controller.launch
src/kr1bou_controller/scripts/: motion_control.py  search_path.py  state_manager.py  strategie.py  strategy.py  utils.py
src/kr1bou_launch/: CMakeLists.txt
src/kr1bou_launch/config/: config.yaml
src/kr1bou_launch/launch/: master.launch
src/kr1bou_launch/scripts/: UI_controler.py  starter_talker.py  team_define.py
src/kr1bou_safety/: CMakeLists.txt
src/kr1bou_safety/launch/: safety.launch
src/kr1bou_safety/scripts/: bumper_watch.py  emergency_stop.py
src/kr1bou_sensors/: CMakeLists.txt
src/kr1bou_sensors/launch/: sensors.launch
src/kr1bou_sensors/scripts/: camera_back.py  camera_front.py  camera_pole.py  lidar.py  test_lidar.py  ultrasound.py
(+1 files in other folders)
